test/org/midica/testfiles/failing/eff-flow-broken-by-note.midica
INCLUDE inc/instruments.midica


0: vol.wait()
0: c
0: .set(50)

